--- a/templates/qrcode/survey_date.html
+++ b/templates/qrcode/survey_date.html
@@ -26,6 +26,12 @@
             .survey__date__form__cover__fixed {
               height: 500px;
             }
+            #survey__date__submit__btn{
+                background-color: var(--green-bg);
+                color: #fff;
+                min-width: 170px;
+                padding: 10px 0px 10px 0px;
+            }
           </style>
     </head>
 
