--- a/templates/qrcode/my_surveys.html
+++ b/templates/qrcode/my_surveys.html
@@ -24,6 +24,13 @@
       rel="stylesheet"
       href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <title>dowell's data table</title>
     <style>
@@ -62,10 +69,40 @@
         color: rgb(83, 135, 53);
         /* padding: 10px 60px; */
       }
+      .create__survey__container {
+        margin-bottom: 15px;
+      }
+      .create__survey__container button {
+        outline: none;
+        border: 0;
+        background-color: rgb(83, 135, 53);
+        padding: 7px 15px;
+        color: #fff;
+        transition: 0.5s ease-in;
+      }
+      .create__survey__container button:hover {
+        background-color: rgb(10, 22, 3);
+      }
+      .create__survey__container a {
+        text-decoration: none;
+      }
+      .create__survey__btn {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+      }
     </style>
   </head>
   <body>
     <div class="container mt-5 mb-5">
+      <div class="create__survey__container">
+        <a href="">
+          <button class="create__survey__btn">
+            <i class="fa fa-plus"></i>
+            <span> create new survey</span>
+          </button>
+        </a>
+      </div>
       <table
         id="example"
         class="table table-striped table-bordered"
@@ -81,12 +118,16 @@
         </thead>
         <tbody>
           {% for qr_code in qr_codes %}
-            <tr>
-              <td>{{ qr_code.brand_name }}</td>
-              <td>{{ qr_code.promotional_sentence }}</td>
-              <td>{{ qr_code.survey_status }}</td>
-              <td id="table__links"><a href="{{ qr_code.survey_link }}">{{ qr_code.survey_link_text }}</a></td>
-            </tr>
+          <tr>
+            <td>{{ qr_code.brand_name }}</td>
+            <td>{{ qr_code.promotional_sentence }}</td>
+            <td>{{ qr_code.survey_status }}</td>
+            <td id="table__links">
+              <a href="{{ qr_code.survey_link }}"
+                >{{ qr_code.survey_link_text }}</a
+              >
+            </td>
+          </tr>
           {% endfor %}
         </tbody>
         <tfoot>
