privacy policy must be checked

--- a/templates/qrcode/create_qr_code_form.html
+++ b/templates/qrcode/create_qr_code_form.html
@@ -135,13 +135,16 @@
 
         <script>
             const qrCodeStartBtn = document.querySelector(".create_qr_code1_submit");
+            const privacyPolicyCheckBox = document.getElementById('checkbox');
           
             const qrCodeStartBtnCloseBtn = document.querySelector("#survey-datestart-close");
             const surveyDatePopup = document.querySelector(".survey_date_popup");
 
             qrCodeStartBtn.addEventListener("click", (e) => {
-                // e.preventDefault();
-                surveyDatePopup.classList.add("survey_date_popup_show");
+                if(privacyPolicyCheckBox.checked){
+                    // e.preventDefault();
+                    surveyDatePopup.classList.add("survey_date_popup_show");
+                }
             });
             qrCodeStartBtnCloseBtn.addEventListener("click", () => {
                 surveyDatePopup.classList.remove("survey_date_popup_show");
