--- a/templates/qrcode/create_qr_code.html
+++ b/templates/qrcode/create_qr_code.html
@@ -25,40 +25,43 @@
     <body>
         <main>
             <div class="container">
-                <!-- main section starts -->
-                <header class="">
-                    <nav id="navbar">
-                        <span class="padding_center"><i class="fa fa-bars"></i></span>
-                    </nav>
-                </header>
-                <section class="qr_code_preview flex padding_center">
-                    <span> Preview of the survey invitation in uxlivinglab page </span>
-                    <span><i class="fa fa-close"></i></span>
-                </section>
-                <section class="qr_code_container">
-                    <div class="qr_img flex">
-                        {% if qrcode %}
-                          <img src="{{ qrcode }}"  alt="..." class="img-thumbnail mb-2">
-                        {% else %}
-                          <img src="{% static 'assets/img/cpp.png' %}"  alt="..." class="img-thumbnail mb-2">
-                        {% endif %}
+                <form action="{% url 'set_survey_date' pk %}" method="get">
+                    <!-- main section starts -->
+                    <header class="">
+                        <nav id="navbar">
+                            <span class="padding_center"><i class="fa fa-bars"></i></span>
+                        </nav>
+                    </header>
+                    <section class="qr_code_preview flex padding_center">
+                        <span> Preview of the survey invitation in uxlivinglab page </span>
+                        <span><i class="fa fa-close"></i></span>
+                    </section>
+                    <section class="qr_code_container">
+                        <div class="qr_img flex">
+                            {% if qrcode %}
+                            <img src="{{ qrcode }}"  alt="..." class="img-thumbnail mb-2">
+                            {% else %}
+                            <img src="{% static 'assets/img/cpp.png' %}"  alt="..." class="img-thumbnail mb-2">
+                            {% endif %}
+                        </div>
+                        <div class="qr_imoji flex">
+                            <span><img src="{% static 'assets/img/image 5.png'%}" alt="" /></span>
+                            <span>{{ promotional_sentence }}</span>
+                        </div>
+                        <div class="privacy_policy flex padding_center">
+                            <span><input type="checkbox" id="checkbox" required/></span>
+                            <span>Privacy Policy</span>
+                        </div>
+                        <div class="qr_footer_text padding_center">
+                            <h4 class="">Click here or scan QR code to fill survey form</h4>
+                        </div>
+                    </section>
+                    <div class="qr_buttons flex padding_center">
+                        <span><button id="qr_edit">Edit</button></span>
+                        <span><input type="submit" id="qr_timeline" value="Set Survey timeline"/></span>
                     </div>
-                    <div class="qr_imoji flex">
-                        <span><img src="{% static 'assets/img/image 5.png'%}" alt="" /></span>
-                        <span>{{ promotional_sentence }}</span>
-                    </div>
-                    <div class="privacy_policy flex padding_center">
-                        <span><input type="checkbox" /></span>
-                        <span>Privacy Policy</span>
-                    </div>
-                    <div class="qr_footer_text padding_center">
-                        <h4 class="">Click here or scan QR code to fill survey form</h4>
-                    </div>
-                </section>
-                <div class="qr_buttons flex padding_center">
-                    <span><button id="qr_edit">Edit</button></span>
-                    <span><a href="{% url 'set_survey_date' pk %}" id="qr_timeline">Set Survey timeline</a></span>
-                </div>
+                </form>
+                
             </div>
         </main>
 
