--- a/templates/qrcode/my_surveys.html
+++ b/templates/qrcode/my_surveys.html
@@ -66,6 +66,9 @@
   </head>
   <body>
     <div class="container mt-5 mb-5">
+      {% if message %}
+        <center><p>{{ message }}</p></center>
+      {% endif %}
       <table
         id="example"
         class="table table-striped table-bordered"
@@ -77,6 +80,7 @@
             <th>Promotional Sentence</th>
             <th>Survey Status</th>
             <th>Manage Survey</th>
+            <th>Delete Survey</th>
           </tr>
         </thead>
         <tbody>
@@ -85,7 +89,8 @@
               <td>{{ qr_code.brand_name }}</td>
               <td>{{ qr_code.promotional_sentence }}</td>
               <td>{{ qr_code.survey_status }}</td>
-              <td id="table__links"><a href="{{ qr_code.survey_link }}">{{ qr_code.survey_link_text }}</a></td>
+              <td><a href="{{ qr_code.survey_link }}">{{ qr_code.survey_link_text }}</a></td>
+              <td><a href="?delete={{ qr_code.id }}">Delete Survey</a></td>
             </tr>
           {% endfor %}
         </tbody>
