users can preview email

--- a/templates/qrcode/my_surveys.html
+++ b/templates/qrcode/my_surveys.html
@@ -102,7 +102,7 @@
         <a href="">
           <button class="create__survey__btn">
             <i class="fa fa-plus"></i>
-            <span> create new survey</span>
+            <a href="/" style="color: white;"> create new survey</span>
           </button>
         </a>
       </div>
@@ -117,6 +117,7 @@
             <th>Promotional Sentence</th>
             <th>Survey Status</th>
             <th>Manage Survey</th>
+            <th>Preview Email</th>
             <th>Delete Survey</th>
           </tr>
         </thead>
@@ -127,6 +128,7 @@
               <td>{{ qr_code.promotional_sentence }}</td>
               <td>{{ qr_code.survey_status }}</td>
               <td><a href="{{ qr_code.survey_link }}">{{ qr_code.survey_link_text }}</a></td>
+              <td><a href="/preview_email?survey_id={{ qr_code.id }}" target="_blank">Preview Email</a></td>
               <td><a href="?delete={{ qr_code.id }}">Delete Survey</a></td>
             </tr>
           {% endfor %}
@@ -137,6 +139,8 @@
             <th>Promotional Sentence</th>
             <th>Survey Status</th>
             <th>Manage Survey</th>
+            <th>Preview Email</th>
+            <th>Delete Survey</th>
           </tr>
         </tfoot>
       </table>
