--- a/templates/qrcode/my_surveys.html
+++ b/templates/qrcode/my_surveys.html
@@ -109,10 +109,10 @@
       <center id="center"><p>{{ message }}</p></center>
       {% endif %}
       <div class="create__survey__container">
-        <a href="">
+        <a href="/">
           <button class="create__survey__btn">
             <i class="fa fa-plus"></i>
-            <a href="/" style="color: white;"> create new survey</span>
+            <span> create new survey</span>
           </button>
         </a>
       </div>
@@ -133,13 +133,17 @@
         </thead>
         <tbody>
           {% for qr_code in qr_codes %}
-            <tr>
-              <td>{{ qr_code.brand_name }}</td>
-              <td>{{ qr_code.promotional_sentence }}</td>
-              <td>{{ qr_code.survey_status }}</td>
-              <td><a href="{{ qr_code.survey_link }}">{{ qr_code.survey_link_text }}</a></td>
-              <td><a href="?delete={{ qr_code.id }}">Delete Survey</a></td>
-            </tr>
+          <tr>
+            <td>{{ qr_code.brand_name }}</td>
+            <td>{{ qr_code.promotional_sentence }}</td>
+            <td>{{ qr_code.survey_status }}</td>
+            <td>
+              <a href="{{ qr_code.survey_link }}"
+                >{{ qr_code.survey_link_text }}</a
+              >
+            </td>
+            <td><a href="?delete={{ qr_code.id }}">Delete Survey</a></td>
+          </tr>
           {% endfor %}
         </tbody>
         <tfoot>
