--- a/templates/qrcode/survey_pused.html
+++ b/templates/qrcode/survey_pused.html
@@ -127,7 +127,7 @@
                     </div>
 
                     <div class="survey__pause__image padding_center">
-                        <img src="img/endsurvey.png" alt="" />
+                        <img src="{% static 'assets/img/endsurvey.png' %}" alt="" />
                     </div>
                     <div class="suervey__paused__icon">
                         <span class="pause__icon"> </span>
