--- a/templates/qrcode/survey_date.html
+++ b/templates/qrcode/survey_date.html
@@ -46,30 +46,58 @@
                 </header>
 
                 <section class="survey__date_fixed">
-                    <section class="survey__text">
-                        <h3>select a start and stop date of survey</h3>
-                    </section>
+                    {% if pause_survey %}
+                        <section class="survey__text">
+                            <h3>Pausing Survey</h3>
+                        </section>
+                    {% else %}
+                        <section class="survey__text">
+                            <h3>select a start and stop date of survey</h3>
+                        </section>
+                    {% endif %}
 
                     <div class="survey__date__form__cover__fixed flex">
                         <form method="post" action="" class="">
                             {% csrf_token %}
-                            <section class="survey__date__title padding_center">
-                                select the duration of survey that has to be shown
-                            </section>
+                            
+                            {% if pause_survey %}
+                                <input type="hidden" value="1" name="pause_survey" id="pause_survey" required />
+                                <section class="survey__date__title padding_center">
+                                    select the date when survey should resume
+                                </section>
+                            {% else %}
+                                <input type="hidden" value="0" name="pause_survey" id="pause_survey" required />
+                                <section class="survey__date__title padding_center">
+                                    select the duration of survey that has to be shown
+                                </section>
+                            {% endif %}
                             <div class="survey__date__inputs flex padding_center">
                                 <div class="form_control_date">
-                                    <label for="start__date">Start date</label>
-                                    <input type="date" value="{{ qr_code.start_date|date:'Y-m-d' }}" name="start_date" id="start_date" required />
-                                </div>
+                                    {% if pause_survey %}
+                                        <label for="start__date">Resume date</label>
+                                        <input type="date" value="" name="start_date" id="start_date" required />
+                                
+                                    {% else %}
+                                        <label for="start__date">Start date</label>
+                                        <input type="date" value="{{ qr_code.start_date|date:'Y-m-d' }}" name="start_date" id="start_date" required />
+                                
+                                    {% endif %}
+
+                             </div>
                                 <div class="form_control_date">
                                     <label for="end__date">End date</label>
                                     <input type="date" value="{{ qr_code.end_date|date:'Y-m-d' }}" name="end_date" id="end_date" required />
                                 </div>
                             </div>
                             <div class="form_control_date__btn padding_center">
-                                <button id="survey__date__btn" class="survey__date__btn survey__date__btn__show">
-                                    start now
-                                </button>
+                                
+                                {% if pause_survey %}
+                                    
+                                {% else %}
+                                    <button id="survey__date__btn" class="survey__date__btn survey__date__btn__show">
+                                        start now
+                                    </button>
+                                {% endif %}
                             </div>
                             <div class="form_control_date__submit__btn padding_center flex">
                                 <button type="submit" id="survey__date__submit__btn">
