--- a/templates/qrcode/feedback.html
+++ b/templates/qrcode/feedback.html
@@ -204,6 +204,7 @@
         background-color: var(--green-bg);
         color: var(--white-color);
         padding: 1rem;
+        cursor: pointer;
       }
 
       /* nav menu items */
