--- a/templates/qrcode/survey_date.html
+++ b/templates/qrcode/survey_date.html
@@ -32,6 +32,17 @@
                 min-width: 170px;
                 padding: 10px 0px 10px 0px;
             }
+            .navbar{
+                display: flex;
+                justify-content: space-between;
+            }
+            .navbar a{
+                color: rgb(16, 15, 15);
+                border-bottom: 1px solid #000;
+                padding: 5px;
+                margin: 5px 20px 5px 20px;
+                
+            }
           </style>
     </head>
 
@@ -40,8 +51,10 @@
             <div class="container">
                 <!-- main section starts -->
                 <header class="">
-                    <nav id="navbar">
+                    <nav id="navbar" class="navbar">
                         <span class="padding_center"><i class="fa fa-bars"></i></span>
+                        
+                        <a href="">All surveys</a>
                     </nav>
                 </header>
 
