--- a/templates/qrcode/survey_date.html
+++ b/templates/qrcode/survey_date.html
@@ -37,11 +37,12 @@
                 justify-content: space-between;
             }
             .navbar a{
-                color: rgb(16, 15, 15);
-                border-bottom: 1px solid #000;
-                padding: 5px;
-                margin: 5px 20px 5px 20px;
-                
+                color:#fff;
+                background-color:hsla(102, 63%, 60%, 1);;
+                padding: 5px 20px 5px 20px;
+                margin-right: 10px;
+                border-radius: 5px;
+                font-size: 12px;
             }
           </style>
     </head>
@@ -54,7 +55,7 @@
                     <nav id="navbar" class="navbar">
                         <span class="padding_center"><i class="fa fa-bars"></i></span>
                         
-                        <a href="">All surveys</a>
+                        <a href="{% url 'my_surveys'%}">Visit dashboard</a>
                     </nav>
                 </header>
 
