--- a/templates/qrcode/survey_date.html
+++ b/templates/qrcode/survey_date.html
@@ -54,8 +54,10 @@
                 <header class="">
                     <nav id="navbar" class="navbar">
                         <span class="padding_center"><i class="fa fa-bars"></i></span>
+                        {% if is_survey_owner_logged_in %}
+                            <a href="{% url 'my_surveys'%}">Visit dashboard</a>
+                        {% endif %}
                         
-                        <a href="{% url 'my_surveys'%}">Visit dashboard</a>
                     </nav>
                 </header>
 
