--- a/templates/qrcode/feedback.html
+++ b/templates/qrcode/feedback.html
@@ -133,8 +133,8 @@
       .form_control_image input[type="image"] {
         border-radius: 50%;
         background-color: var(--gray-bg);
-        max-height: 100px;
-        max-width: 100px;
+        height: 100px;
+        width: 100px;
         outline: none;
         border: none;
       }
