--- a/templates/qrcode/my_surveys.html
+++ b/templates/qrcode/my_surveys.html
@@ -123,6 +123,7 @@
       >
         <thead>
           <tr>
+              <th>No</th>
             <th>Name</th>
             <th>Promotional Sentence</th>
             <th>Survey Status</th>
@@ -134,6 +135,7 @@
         <tbody>
           {% for qr_code in qr_codes %}
             <tr>
+                <td>{{forloop.counter}}</td>
               <td>{{ qr_code.brand_name }}</td>
               <td>{{ qr_code.promotional_sentence }}</td>
               <td>{{ qr_code.survey_status }}</td>
@@ -143,47 +145,57 @@
             </tr>
           {% endfor %}
         </tbody>
-        <tfoot>
-          <tr>
-            <th>Name</th>
-            <th>Promotional Sentence</th>
-            <th>Survey Status</th>
-            <th>Manage Survey</th>
-            <th>Preview Email</th>
-            <th>Delete Survey</th>
-          </tr>
-        </tfoot>
+        <!--<tfoot>-->
+        <!--  <tr>-->
+        <!--    <th>Name</th>-->
+        <!--    <th>Promotional Sentence</th>-->
+        <!--    <th>Survey Status</th>-->
+        <!--    <th>Manage Survey</th>-->
+        <!--    <th>Preview Email</th>-->
+        <!--    <th>Delete Survey</th>-->
+        <!--  </tr>-->
+        <!--</tfoot>-->
       </table>
     </div>
 
-    <!-- Optional JavaScript -->
+<!-- Optional JavaScript -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+        <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
+<!--<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>-->
+<script src="https://use.fontawesome.com/b4aae4cb0e.js"></script>
+<script type="text/javascript" src="https://cdn.rawgit.com/leafo/sticky-kit/v1.1.2/jquery.sticky-kit.min.js"></script>
+<!--<script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>-->
+<script type="text/javascript" src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
 
-    <!-- datatable scripts -->
-
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.2.9/js/responsive.bootstrap4.min.js"></script>
+<!--<script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap4.min.js"></script>-->
+<script type="text/javascript" src="https://cdn.datatables.net/1.11.4/js/dataTables.bootstrap4.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.9/js/responsive.bootstrap4.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/fixedheader/3.2.0/js/dataTables.fixedHeader.min.js"></script>
 
     <script>
       $(document).ready(function () {
-        $("#example").DataTable();
+        $("#example").DataTable({
+        // fixedHeader: true
+         responsive: {
+    breakpoints: [
+      {name: 'bigdesktop', width: Infinity},
+      {name: 'meddesktop', width: 1480},
+      {name: 'smalldesktop', width: 1280},
+      {name: 'medium', width: 1188},
+      {name: 'tabletl', width: 1024},
+      {name: 'btwtabllandp', width: 848},
+      {name: 'tabletp', width: 768},
+      {name: 'mobilel', width: 480},
+      {name: 'mobilep', width: 320}
+    ]
+  }
+    });
       });
     </script>
     <script>
