--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -97,6 +97,7 @@ main {
 .close_container #close {
   margin-right: 2.2rem;
   margin-top: 0.5rem;
+  cursor: pointer;
 }
 .disclaimer {
   justify-content: space-around;
